apps/arr-stack/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:2.5.2@sha256:c7502a75b021d964481c129c84590b9cbc40f83aadd4e553f173871bc0deaa3c
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 3101
          runAsGroup: 3100
        ports:
        - name: prowlarr
          containerPort: 9696
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: run-tmpfs
          mountPath: /run
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1500m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: run-tmpfs
        emptyDir:
          medium: Memory
