apps/arr-stack/prowlarr/route.yaml
# apps/arr-stack/prowlarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  namespace: prowlarr
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: prowlarr-https     
  hostnames:
    - "prowlarr.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: auth-prowlarr
          namespace: shared-authentication
          port: 80
